# UiXX-zephyr-control

./: .gitignore  .gitmodules  README.org  full-build-and-flash.sh  local-client.py  minicom_ttyACM0.sh  oci-build.sh  samples_drivers_led_ws2812  samples_net_sockets_websocket_client  samples_net_wifi  west_espressif_monitor.sh
app/: CMakeLists.txt  Kconfig  prj.conf  prj.conf.old  west.yml
app/boards/: beagleconnect_freedom.overlay  stamp_c3.conf  stamp_c3.overlay
app/src/: main.c  main.cpp  status_led.c  status_led.cpp  status_led.h  uiclient.cpp  uiclient.h  wifi.cpp  wifi.h
docker/: devcontainer.json
